Preventing overlapping of the video.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -135,7 +135,6 @@
 }
 
 #youtube {
-  background: black;
   padding: 5px;
   min-width: 200px;
 }
@@ -144,7 +143,6 @@
   height: 280px;
 }
 #youtube-wrapper div {
-  width: 200px;
-  height: 115px;
-  float: left;
+  background: black;
+  padding: 5px;
 }
